# arxiv2026-ProReviewer

./: .gitignore  README.md  config.toml  config.toml.example  environment_rllm.yml  evaluation.py  pyproject.toml  run_inference.py  train.py
ProReviewer-Skill/: .gitignore  LICENSE  README.md
ProReviewer-Skill/agents/: openai.yaml
ProReviewer-Skill/proreviewer/: SKILL.md  __init__.py  review_cli.py  reviewer_memory.py
baselines/reviewer_r1_inference/: run_inference.py
reviewer/: __init__.py  evaluation.py
reviewer/core/: __init__.py  base_agent.py  environment.py  proreviewer.py  research_agent.py  research_baseline.py  research_prompts.py  review_env.py  review_workflow.py  reviewer_memory.py  reviewer_prompts.py  reviewer_prompts_direct.py  reviewer_r1.py  verifier.py
reviewer/legacy/: __init__.py  generate_review_sft_data.py  prepare_review_dataset.py  review_agent.py  review_env.py  rollout.py  trace_generator.py  train.py  train_sft.py
reviewer/prompts/: review_utility_prompt.py  reward_prompts.py  rubric_dimensions.py  trajectory_v2_prompt.py
reviewer/reward/: __init__.py  calculator.py  components.py  duplicate_checker.py  factual_correctness_simple.py  memory_reasoning.py  readme_sci.md  rubric_evaluator.py  rule_evaluator.py  score_review.py  trajectory_memory_reasoning.py  trajectory_memory_reasoning_v2.py  trajectory_memory_reasoning_v2_evidence.py  trajectory_memory_reasoning_v2_prompt_evidence.py  (+1 more)
reviewer/rllm_version/: train.py  (+5 more)
rllm/: change.md
utils/: data_inspect.py  extract_clustered_points.py  latex_concatenator.py  paper_filter.py
(+32 files in other folders)
